# compass-case-ai

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py  exceptions.py  logging.py
app/extractors/: pdf_handler.py  strategy.py
app/llm/: client.py  prompts.py
app/models/: invoice.py  job.py
app/services/: extraction_service.py
app/storage/: base.py  memory.py
app/workers/: extraction_worker.py
docs/: architecture.md
tests/: test_smoke.py  unit_tests.py
